--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,13 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+}
+:root {
+  --font-pretendard: 'Pretendard Variable', sans-serif;
+}
+
+body {
+  font-family: var(--font-pretendard);
 }
 
 @layer utilities {
@@ -29,4 +35,8 @@ body {
 
 .card-size {
   aspect-ratio: 640 / 800;
+}
+
+.home-logo-size {
+  aspect-ratio: 82 / 107;
 }
