[deploy]고르기 완료 , 모든 액션 로딩 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,3 +57,11 @@ body {
 .progress-color-value {
   background-color: #F1F5F9;
 }
+
+.food-detail-card-size {
+  aspect-ratio: 112 / 112;
+}
+
+.food-detail-card-image-size {
+  aspect-ratio: 80 / 80;
+}
