--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,24 @@
   }
 }
 
+html, body {
+  overscroll-behavior: none;
+}
+.isolate {
+  isolation: isolate;
+}
+
+body {
+  width: 100%;
+  max-width: 640px;
+  margin: 0 auto;
+}
+
+
+html {
+  overflow: hidden;
+}
+
 
 body {
   color: var(--foreground);
@@ -40,10 +58,19 @@ body {
   }
 }
 
+@media (max-width: 640px) {
+  .card-image-size {
+    width: 120px !important;
+    height: 140px !important;
+    aspect-ratio: auto !important;
+    max-height: none !important;
+    margin: 0 auto;
+  }
+  .cardWrap{
 
-.card-image-size {
-  aspect-ratio: 262 / 224;
+  }
 }
+
 
 .card-size {
   aspect-ratio: 294 / 390;
