[deploy] 블로그 업데이트

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,19 @@
     text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
   }
+
 }
+
+    .notion-collection-page-properties {
+        display: none !important;
+    }
+    .notion-page {
+        padding: 0 !important;
+    }
+
+    .notion-list {
+        width: 100% !important;
+    }
 
 html, body {
   overscroll-behavior: none;
