[deploy] 블로그 태그 없애고 카테고리로 통일,

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,6 +52,19 @@ html {
 }
 
 
+html, body {
+    height: 100%;
+    height: -webkit-fill-available;
+}
+
+@supports (padding: max(0px)) {
+    body {
+        padding-left: env(safe-area-inset-left);
+        padding-right: env(safe-area-inset-right);
+    }
+}
+
+
 body {
   color: var(--foreground);
   background: var(--background);
